@@ -9,5 +9,6 @@ t/14_setgetondisk.t
 t/15_setgetaref.t
 t/16_init.t
 t/17_get_accessor.t
+t/18_setgetuniqarray.t
 t/Person.pm
 META.yml                                 Module meta-data (added by MakeMaker)
